--- a/index.htm
+++ b/index.htm
@@ -45,7 +45,17 @@
         <hr>
         <h1>Your Notes</h1>
         <hr>
-        <div id="notes" class="row container-fluid"></div>
+        <div id="notes" class="row container-fluid">
+            <div class=" noteCard card my-2 mx-2" style="width: 18rem;">
+                <div class="card-body">
+                    <h5 class="card-title">Note</h5>
+                    <a href="#" class="btn btn-primary">Delete Note</a>
+                </div>
+            </div>
+
+
+
+        </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
