--- a/index.htm
+++ b/index.htm
@@ -11,7 +11,7 @@
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
-        <a class="navbar-brand" href="#">Your Notes</a>
+        <a class="navbar-brand" href="#">Magic Notes App</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -31,7 +31,7 @@
     </nav>
 
     <div class="container my-3">
-        <h1>Welcome To Your Notes</h1>
+        <h1>Welcome To Magic Notes</h1>
         <div class="card">
 
             <div class="card-body">
