--- a/index.htm
+++ b/index.htm
@@ -35,11 +35,20 @@
         <div class="card">
 
             <div class="card-body">
+                <h5 class="card-title">Add Title</h5>
+                <div class="form-group">
+                    <input type="text" class="form-control" id="addTitle" aria-describedby="emailHelp" placeholder="Enter title">
+                </div>
+
+
+
+
                 <h5 class="card-title">Add a Note</h5>
                 <div class="form-group">
-                    <textarea class="form-control" id="addTxt" rows="3"></textarea>
+                    <textarea class="form-control" id="addTxt" rows="3" placeholder="Enter a Note"></textarea>
                 </div>
                 <button class="btn btn-primary" id="addBtn">Add Note</button>
+
             </div>
         </div>
         <hr>
